--- a/.gcloudignore
+++ b/.gcloudignore
@@ -71,7 +71,6 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
-.env.yaml
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -103,3 +102,16 @@ dist
 
 # TernJS port file
 .tern-port
+
+# other files
+.editorconfig
+.env.yaml
+.eslintignore
+.eslintrc.js
+.gcloudignore
+.git/
+.github/
+.gitignore
+LICENSE
+README.md
+yarn.lock
